<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ga_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent">

        <ImageButton
            android:id="@+id/ga_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical"
            android:background="@drawable/app_menu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/gallery"
            android:textSize="18sp"
            android:textColor="@color/colorSecondary" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/me_gallery"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="fmt.febuweather.Gallery">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold|italic"
            android:text="@string/app_name"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/ga_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            ads:adUnitId="@string/ga_admob_banner">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/ga_loc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/ga_loc_name_usa"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/ga_loc_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:contentDescription="@null"/>

        <ImageButton
            android:id="@+id/ga_prev_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ga_previous"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical|start" />

        <ImageButton
            android:id="@+id/ga_next_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ga_next"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical|end" />

        </FrameLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>